Fix scrollbar, and add button to add column

--- a/public/assets/styles/scrollbars.css
+++ b/public/assets/styles/scrollbars.css
@@ -15,7 +15,6 @@ html {
 
 .scrollable-container {
   scrollbar-width: thin;
-  scrollbar-color: transparent transparent;
 }
 
 .scrollable-container:hover {
